--- a/scanner.css
+++ b/scanner.css
@@ -1,4 +1,4 @@
-/* guvenlik-tarayici/scanner.css */
+/* guvenlik-tarayici/scanner.css update */
 #scanner-app-container {
     background: #fff;
     border: 1px solid #c3c4c7;
